<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:ems="10"
        android:hint="@string/etItemName"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tvCategory" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="375dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:cursorVisible="false"
        android:ems="10"
        android:hint="@string/etItemDescription"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/etEstimatedPrice"
        android:inputType="numberDecimal" />

    <CheckBox
        android:id="@+id/cbPurchasedIns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cbAlreadyPurchased" />

</LinearLayout>