<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#0090ff"
    android:layout_margin="10dp"
    app:cardCornerRadius="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="143dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/itemTitleHolder"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="99dp"
            android:layout_height="98dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemTitle"
            app:srcCompat="@drawable/foodicon" />

        <TextView
            android:id="@+id/txtPriceLabel"
            android:layout_width="57dp"
            android:layout_height="30dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="12dp"
            android:text="@string/txtPrice"
            android:textColor="#FFF"
            app:layout_constraintStart_toEndOf="@+id/itemImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:textSize="20sp" />

        <TextView
            android:id="@+id/txtPriceLabel2"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="88dp"
            android:text="@string/txtDescription"
            android:textColor="#FFF"
            app:layout_constraintStart_toEndOf="@+id/itemImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:textSize="20sp" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="218dp"
            android:layout_height="56dp"
            android:text="@string/txtDescriptionHolder"
            tools:layout_editor_absoluteX="115dp"
            tools:layout_editor_absoluteY="116dp"
            tools:textSize="20sp" />

        <TextView
            android:id="@+id/txtPriceData"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="36dp"
            android:text="@string/txtPriceHolder"
            android:textColor="#a10003"
            android:textSize="26sp"
            app:layout_constraintStart_toEndOf="@+id/itemImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtQuantity"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/txtQuantity"
            android:textColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:textSize="20sp" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/btnEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemImage" />

        <NumberPicker
            android:id="@+id/numPicker"
            android:layout_width="49dp"
            android:layout_height="147dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:clickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtQuantity"/>

        <CheckBox
            android:id="@+id/cbPurchased"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/cbAlreadyPurchasedTxt"
            app:layout_constraintStart_toEndOf="@+id/btnEdit"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>